--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-== Welcome to Rails,rails i love you 
+== Welcome to Rails,rails i love you very much
 
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
